headerを作成中 ドロップダウンメニューを作成中

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -39,11 +39,11 @@
     <button class="btn btn-secondary">ACCESS</button>
     <button class="btn btn-secondary">DOWNLOAD</button>
   </div>
-  <div class="rectangle-group dropdown">
+  <div class="rectangle-group">
     <div class="rectangle"></div>
     <div class="rectangle"></div>
     <div class="rectangle"></div>
-    <ul class="rectangle-dropdown-menu">
+    <ul class="rectangle-dropdown-menu dropdown">
       <li><a href="#">HOME</a></li>
       <li>
         <a href="#">CONCEPT</a>
