--- a/src/components/molecules/plan/plan.html
+++ b/src/components/molecules/plan/plan.html
@@ -1,31 +1,14 @@
-<div class="plan">
-  <ul>
-    <li>プランテキスト</li>
-    <li>
-      <div>
-        <p>&yen;</p>
-        <p>5,000</p>
-      </div>
-      <p>月額</p>
-    </li>
-    <li>入会金0円</li>
-    <li>平日:9時～17時</li>
-    <li>土日祝:利用無し</li>
-    <li>コアタイムでの利用に最適なプラン</li>
-  </ul>
-
-  <ul>
-    <li>プランテキスト</li>
-    <li>
-      <div>
-        <p>&yen;</p>
-        <p>5,000</p>
-      </div>
-      <p>月額</p>
-    </li>
-    <li>入会金0円</li>
-    <li>平日:9時～17時</li>
-    <li>土日祝:利用無し</li>
-    <li>コアタイムでの利用に最適なプラン</li>
-  </ul>
-</div>
+<ul class="plan">
+  <li>プランテキスト</li>
+  <li>
+    <div>
+      <p>&yen;</p>
+      <p>5,000</p>
+    </div>
+    <p>月額</p>
+  </li>
+  <li>入会金0円</li>
+  <li>平日:9時～17時</li>
+  <li>土日祝:利用無し</li>
+  <li>コアタイムでの利用に最適なプラン</li>
+</ul>
