topを作成中 文字を重ねて縦書き完了 残りはレスポンシブ対応

--- a/src/components/organisms/top/top.html
+++ b/src/components/organisms/top/top.html
@@ -1,8 +1,10 @@
 <div class="top">
   <div class="img-group">
     <img src="../../../img/top.jpg" alt="" />
-    <p>そうだ。</p>
-    <p>カフェに行こう。</p>
+    <div class="literal">
+      <p>カフェに行こう。</p>
+      <p>そうだ。</p>
+    </div>
   </div>
   <div class="message">
     <h2 class="text-title">
