aboutを作成中 md以下での画像の拡大と配置を調整中

--- a/src/components/organisms/about/about.scss
+++ b/src/components/organisms/about/about.scss
@@ -1,18 +1,53 @@
 @use "../../variables" as *;
 
 .about {
+  @media screen and(max-width:$breakpoint-lg) {
+    padding: 0px 136px 40px 136px;
+    width: 991px;
+    .img-group {
+      img {
+        width: 360px;
+      }
+    }
+    .message {
+      width: 720px;
+      height: 268px;
+      padding: 32px 20px;
+      p {
+        font-size: 14px;
+        line-height: 28px;
+      }
+    }
+  }
+  @media screen and(min-width:$breakpoint-lg) {
+    padding: 0px 16px 100px 16px;
+    width: 992px;
+    .img-group {
+      img {
+        width: 240px;
+      }
+    }
+    .message {
+      width: 960px;
+      height: 312px;
+      h2 {
+        font-size: 36px;
+        line-height: 54px;
+      }
+      p {
+        font-size: 14px;
+        line-height: 36px;
+      }
+    }
+  }
+
+  .img-group {
+    display: flex;
+  }
   .message {
     background-color: $white_smoke;
     h2 {
       color: $orange_bistre;
-      width: 460px;
-      height: 30px;
-      font-size: 20px;
-      line-height: 30px;
-      display: flex;
-      align-items: center;
-      text-align: center;
-      margin: 0px;
     }
   }
 }
