--- a/src/components/organisms/top/top.scss
+++ b/src/components/organisms/top/top.scss
@@ -1,6 +1,7 @@
 @use "../../variables" as *;
 
 .top {
+  padding: 0px;
   .img-group {
     position: relative;
     img {
@@ -29,22 +30,39 @@
     }
   }
   .message {
-    width: 992px;
-    height: 316px;
     background-color: $black;
-    padding: 52px 63px 74px 36px;
     h2 {
       color: $white;
-      font-size: 36px;
-      line-height: 54px;
-      display: flex;
-      align-items: center;
-      text-align: center;
-      margin-bottom: 10px;
     }
     p {
-      line-height: 36px;
       color: $white;
+    }
+    @media screen and(max-width:$breakpoint-lg) {
+      width: 992px;
+      height: 211px;
+      padding: 32px auto 32px;
+      margin: 0px;
+      h2 {
+        font-size: 20px;
+        line-height: 29px;
+        margin-bottom: 6px;
+      }
+      p {
+        line-height: 28px;
+      }
+    }
+    @media screen and(min-width:$breakpoint-lg) {
+      width: 992px;
+      height: 316px;
+      padding: 52px 63px 74px 36px;
+      h2 {
+        font-size: 36px;
+        line-height: 54px;
+        margin-bottom: 10px;
+      }
+      p {
+        line-height: 36px;
+      }
     }
   }
 }
