--- a/src/components/molecules/message/message.scss
+++ b/src/components/molecules/message/message.scss
@@ -3,7 +3,7 @@
 .message {
   text-align: center;
   padding: 52px 20px;
-  @media screen and (max-width: breakpoint-lg) {
+  @media screen and (max-width: $breakpoint-lg) {
     padding: 32px 20px;
   }
 
