--- a/src/components/organisms/top/top.scss
+++ b/src/components/organisms/top/top.scss
@@ -39,13 +39,13 @@
       color: $white;
     }
   }
-  @media screen and(max-width:$breakpoint-lg) {
+  @media screen and(max-width:$breakpoint-md) {
     .img-group {
     }
     .message {
       width: 992px;
       height: 211px;
-      margin: 0px;
+      padding: 32px 161px 20px 161px;
       h2 {
         font-size: 20px;
         line-height: 29px;
