--- a/src/components/organisms/top/top.scss
+++ b/src/components/organisms/top/top.scss
@@ -1,7 +1,6 @@
 @use "../../variables" as *;
 
 .top {
-  padding: 0px;
   .img-group {
     position: relative;
     width: 992px;
@@ -9,9 +8,6 @@
       display: flex;
       width: 992px;
       height: 700px;
-      // @media screen and(max-width:$breakpoint-md) {
-      //   height: 360px;
-      // }
     }
     .literal {
       position: absolute;
@@ -21,8 +17,6 @@
       display: flex;
       p {
         font-family: $fontfamily-mincho;
-        font-size: 36px;
-        line-height: 52px;
         display: flex;
         align-items: center;
         color: $white;
@@ -39,8 +33,20 @@
       color: $white;
     }
   }
-  @media screen and(max-width:$breakpoint-md) {
+  @media screen and(max-width:$breakpoint-lg) {
+    position: relative;
     .img-group {
+      img {
+        width: 992px;
+        height: 360px;
+        object-fit: cover;
+      }
+      .literal {
+        p {
+          font-size: 20px;
+          line-height: 29px;
+        }
+      }
     }
     .message {
       width: 992px;
@@ -57,13 +63,21 @@
     }
   }
   @media screen and(min-width:$breakpoint-lg) {
+    .img-group {
+      .literal {
+        p {
+          font-size: 36px;
+          line-height: 52px;
+        }
+      }
+    }
     .message {
       width: 992px;
       height: 316px;
       padding: 52px 63px 74px 36px;
       h2 {
         font-size: 36px;
-        line-height: 54px;
+        line-height: 52px;
         margin-bottom: 10px;
       }
       p {
