aboutを作成中 画像の大きさは調整終了

--- a/src/components/organisms/about/about.scss
+++ b/src/components/organisms/about/about.scss
@@ -6,7 +6,8 @@
     width: 991px;
     .img-group {
       img {
-        width: 360px;
+        margin: 32.5px 32.5px 30px 32.5px;
+        transform: scale(calc(360 / 295));
       }
     }
     .message {
