--- a/src/components/organisms/about/about.html
+++ b/src/components/organisms/about/about.html
@@ -1,9 +1,13 @@
 <div class="about">
   <div class="img-group">
-    <img src="../../../img/about-1.jpg" alt="" />
-    <img src="../../../img/about-2.jpg" alt="" />
-    <img src="../../../img/about-3.jpg" alt="" />
-    <img src="../../../img/about-4.jpg" alt="" />
+    <div class="img-grp">
+      <img src="../../../img/about-1.jpg" alt="" />
+      <img src="../../../img/about-2.jpg" alt="" />
+    </div>
+    <div class="img-grp">
+      <img src="../../../img/about-3.jpg" alt="" />
+      <img src="../../../img/about-4.jpg" alt="" />
+    </div>
   </div>
   <div class="message">
     <h2 class="text-title">人と人、人と本がつながる全く新しい快適時間。</h2>
