footerを作成中 要素の配置はほぼ終了

--- a/src/components/organisms/footer/footer.html
+++ b/src/components/organisms/footer/footer.html
@@ -1,9 +1,8 @@
 <div class="footer">
   <div class="contact">
-    <img src="../../../img/header.png" alt="switch" />
     <div class="address">
-      <p>〒532-0011&nbsp;&nbsp;大阪市淀川区西中島6丁目8-23テスト</p>
       <p>
+        〒532-0011&nbsp;&nbsp;大阪市淀川区西中島6丁目8-23テスト <br />
         TEL.06-1234-5678
         FAX.06-1234-5678&nbsp;&nbsp;営業時間/9:00-22:00&nbsp;&nbsp;定休日/不定休
       </p>
