topを修正中 md以下での修正完了

--- a/src/components/organisms/top/top.html
+++ b/src/components/organisms/top/top.html
@@ -1,9 +1,10 @@
-<div class="top">
+<section class="top">
   <div class="img-group">
-    <img src="../../../img/top.jpg" alt="" />
     <div class="literal">
-      <p>カフェに行こう。</p>
-      <p>そうだ。</p>
+      <p>
+        そうだ。 <br />
+        カフェに行こう。
+      </p>
     </div>
   </div>
   <div class="message">
@@ -11,10 +12,8 @@
       カフェで読書＆コワーキング。快適のフロアスペース空間。
     </h2>
     <p class="explanation-text">
-      カフェテリアでコーヒーを注文し、ブックエリアでお好みの本を選び、コワーキングスペースでコーヒーと共に読書を楽しむ。
-    </p>
-    <p class="explanation-text">
+      カフェテリアでコーヒーを注文し、ブックエリアでお好みの本を選び、コワーキングスペースでコーヒーと共に読書を楽しむ。<br />
       学校・仕事帰りに、平日の日中に、休日にゆっくり...様々なライフスタイルに合わせてご利用いただける多彩なプランをご用意しております。
     </p>
   </div>
-</div>
+</section>
