cardsを修正中 containerクラスを付与

--- a/src/components/organisms/cards/cards.html
+++ b/src/components/organisms/cards/cards.html
@@ -1,4 +1,4 @@
-<div class="card-group">
+<div class="card-group container">
   <div class="card card-change">
     <div class="triangle"></div>
     <div class="triangle-text">CONCEPT</div>
@@ -7,8 +7,7 @@
       <div class="card-body card-body-change">
         <p>
           「本屋」でも「自習室」でもない、新しい空間。それがこのカフェ&コワーキングです。
-        </p>
-        <p>
+          <br />
           お好きなドリンクを飲みながらゆったりと気兼ねなく勉強や仕事に取り組んでいただけます。
         </p>
       </div>
