--- a/src/components/organisms/cards/cards.scss
+++ b/src/components/organisms/cards/cards.scss
@@ -2,6 +2,11 @@
 
 .card-group {
   display: flex;
+  .card-change {
+    .card-body-field {
+      flex: 1;
+    }
+  }
   @media screen and(max-width:$breakpoint-md) {
     padding: 0px 113px;
     flex-flow: column;
@@ -13,6 +18,7 @@
     padding: 0px 24px 100px 24px;
     gap: 24px;
     div.card-body-change {
+      height: 330px;
       p {
         margin-bottom: 0px;
       }
@@ -22,6 +28,7 @@
     padding: 0px 24px 100px 24px;
     gap: 24px;
     div.card-body-change {
+      height: 198px;
       p {
         margin-bottom: 0px;
       }
@@ -31,6 +38,7 @@
     padding: 0px 24px 100px 24px;
     gap: 24px;
     div.card-body-change {
+      height: 165px;
       p {
         margin-bottom: 0px;
       }
