aboutを修正 container-fluidクラスに変更

--- a/src/components/organisms/about/about.html
+++ b/src/components/organisms/about/about.html
@@ -1,4 +1,4 @@
-<div class="about container">
+<div class="about container-fluid">
   <div class="img-group">
     <div class="img-grp">
       <img src="../../../img/about-1.jpg" alt="" />
