--- a/src/components/organisms/about/about.html
+++ b/src/components/organisms/about/about.html
@@ -1,23 +1,17 @@
-<div class="about container-fluid">
+<div class="about container">
   <div class="img-group">
-    <div class="img-grp">
-      <img src="../../../img/about-1.jpg" alt="" />
-      <img src="../../../img/about-2.jpg" alt="" />
-    </div>
-    <div class="img-grp">
-      <img src="../../../img/about-3.jpg" alt="" />
-      <img src="../../../img/about-4.jpg" alt="" />
-    </div>
+    <img src="../../../img/about-1.jpg" alt="" />
+    <img src="../../../img/about-2.jpg" alt="" />
+    <img src="../../../img/about-3.jpg" alt="" />
+    <img src="../../../img/about-4.jpg" alt="" />
   </div>
   <div class="message">
     <h2 class="text-title">人と人、人と本がつながる全く新しい快適時間。</h2>
     <p class="explanation-text">
       月額プラン以外にビジター料金でのご利用も可能です。通いやすい時間や曜日に合わせてプランをお選びください。
-    </p>
-    <p class="explanation-text">
+      <br />
       ご登録プランは後の変更も可能ですので、資格試験等の目標がある場合など環境の変化に合わせて柔軟に対応しております。WiFiも電源も標準設備しており、
-    </p>
-    <p class="explanation-text">
+      <br />
       時間を気にせず仕事や勉強に取り組めます。カフェでの長居は気が引けるという方にも心置きなくご利用いただけます
     </p>
   </div>
