cardsを修正完了

--- a/src/components/organisms/cards/cards.html
+++ b/src/components/organisms/cards/cards.html
@@ -31,7 +31,7 @@
     <img src="../../../img/card-3.jpg" class="card-img-change" alt="card1" />
     <div class="card-body-field">
       <div class="card-body card-body-change">
-        カフェ・ブック・コワーキング。各エリアで異なるコンセプトを持つ当店では。目的や気分に合わせてフロア内を移動することで充実した時間をお過ごしいただけます。
+        カフェ・ブック・コワーキング。各エリアで異なるコンセプトを持つ当店では。目的や気分に合わせてフロア内を移動することで充実した時間をお過ごしいただけます。<br />
       </div>
       <a class="button button-change">フロアー</a>
     </div>
