--- a/src/components/molecules/message/message.scss
+++ b/src/components/molecules/message/message.scss
@@ -2,10 +2,9 @@
 
 .message {
   text-align: center;
-  padding: 52px auto 20px auto;
+  padding: 52px 20px;
   @media screen and (max-width: $breakpoint-lg) {
-    padding-top: 32px;
-    padding-bottom: 20px;
+    padding: 32px 20px;
   }
 
   .text-title {
