footerを作成中 smでのアイコン以外は終了 アイコンが表示されない

--- a/src/components/organisms/footer/footer.html
+++ b/src/components/organisms/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<section class="footer">
   <div class="contact">
     <div class="address">
       <p>
@@ -7,10 +7,15 @@
         FAX.06-1234-5678&nbsp;&nbsp;営業時間/9:00-22:00&nbsp;&nbsp;定休日/不定休
       </p>
     </div>
-    <div class="icon-list"></div>
+    <div class="icon-list">
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-sharp fa-solid fa-rss"></i>
+    </div>
   </div>
   <div class="content-list">
-    <div class="left">
+    <div class="side left">
       <p>HOME</p>
       <div class="bar"></div>
       <p>SERVICE</p>
@@ -20,7 +25,7 @@
       <p>ACCESS</p>
       <div class="bar"></div>
     </div>
-    <div class="right">
+    <div class="side right">
       <p>CONCEPT</p>
       <div class="bar"></div>
       <p>FLOOR</p>
@@ -33,4 +38,4 @@
   <div class="copyright">
     Copyright&nbsp;&copy;&nbsp;WordPressテーマ「Switch&#40;tcd063&#41;」All&nbsp;Right&nbsp;Reserved
   </div>
-</div>
+</section>
