--- a/src/components/organisms/footer/footer.scss
+++ b/src/components/organisms/footer/footer.scss
@@ -3,28 +3,46 @@
   .contact {
     background-color: $white;
     .address {
-      width: 499px;
-      height: 56px;
+      width: fit-content;
       background-image: url(../../../img/footer.png);
       background-repeat: no-repeat;
       background-size: 150px 25.7px;
-      background-position: center;
+      background-position: top 32px center;
       p {
         font-size: 14px;
         line-height: 28px;
-        display: flex;
-        align-items: center;
-        text-align: center;
+        padding: 77.7px 66px;
         margin: 0px;
         white-space: nowrap;
       }
     }
+    .icon-list {
+    }
   }
   .content-list {
+    display: grid;
+    grid-template-columns: repeat((2, 1fr));
+    background-color: $white_smoke;
+    padding: 16px;
+    .side {
+      display: grid;
+      gap: 8px;
+      p {
+        margin-bottom: 0px;
+      }
+    }
   }
   .copyright {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 44px;
+    background-color: $black;
+    color: $white;
+    font-size: 12px;
+    line-height: 12px;
   }
-  @media screen and(max-width:$breakpoint-md) {
+  @media screen and(min-width:$breakpoint-md) {
     .contact {
       width: 767px;
       height: 199.7px;
@@ -32,7 +50,5 @@
         padding: 77.7px 134px 32px;
       }
     }
-  }
-  @media screen and(min-width:$breakpoint-sm) {
   }
 }
