aboutを修正 @useを使用

--- a/src/components/organisms/about/about.scss
+++ b/src/components/organisms/about/about.scss
@@ -1,5 +1,5 @@
 @use "../../variables" as *;
-
+@use "../../molecules/message/message.scss" as *;
 .about {
   @media screen and(min-width:$breakpoint-lg) {
     max-width: 990px;
