footerを作成中 md以上でもとりあえず完成 いまだにアイコンは表示できず

--- a/src/components/organisms/footer/footer.html
+++ b/src/components/organisms/footer/footer.html
@@ -15,23 +15,23 @@
     </div>
   </div>
   <div class="content-list">
-    <div class="side left">
+    <div class="side">
       <p>HOME</p>
-      <div class="bar"></div>
+      <span class="bar">|</span>
       <p>SERVICE</p>
-      <div class="bar"></div>
+      <span class="bar">|</span>
       <p>INTERVIEW</p>
-      <div class="bar"></div>
+      <span class="bar">|</span>
       <p>ACCESS</p>
-      <div class="bar"></div>
+      <span class="bar">|</span>
     </div>
-    <div class="side right">
+    <div class="side">
       <p>CONCEPT</p>
-      <div class="bar"></div>
+      <span class="bar">|</span>
       <p>FLOOR</p>
-      <div class="bar"></div>
+      <span class="bar">|</span>
       <p>BLOG</p>
-      <div class="bar"></div>
+      <span class="bar">|</span>
       <p>DOWNLOAD</p>
     </div>
   </div>
