--- a/src/components/organisms/footer/footer.scss
+++ b/src/components/organisms/footer/footer.scss
@@ -13,13 +13,17 @@
         font-size: 14px;
         line-height: 28px;
         text-align: center;
+        margin-bottom: 0px;
       }
     }
     .icon-list {
       text-align: center;
       margin-top: 20px;
-      &:hover {
-        color: $gray_nobel;
+      i {
+        margin: 0px 7px 0px 7px;
+        &:hover {
+          color: $gray_nobel;
+        }
       }
     }
   }
