plansを作成中 smひとまず完成

--- a/src/components/organisms/plans/plans.html
+++ b/src/components/organisms/plans/plans.html
@@ -1,4 +1,4 @@
-<section class="plans">
+<section class="plans container">
   <div class="message">
     <h2 class="text-title">ライフスタイルに合わせて選べる多彩なプラン</h2>
     <p class="explanation-text">
