plansを作成中 md以上大体完成 largeでの中央のplanの挙動がおかしい

--- a/src/components/organisms/plans/plans.scss
+++ b/src/components/organisms/plans/plans.scss
@@ -11,4 +11,16 @@ section.plans {
   .button {
     margin: 24px auto;
   }
+  @media screen and(min-width:$breakpoint-md) {
+    margin-bottom: 100px;
+    .message {
+      padding: 56px 0px 32px;
+    }
+    .plan-group {
+      display: flex;
+      .plan {
+        margin: 0px 15px;
+      }
+    }
+  }
 }
