--- a/src/components/organisms/plans/plans.html
+++ b/src/components/organisms/plans/plans.html
@@ -7,47 +7,49 @@
       <br />ビジター料金でのご利用も可能ですので、月額会員登録の前に体験をしたいという方もぜひご利用ください。
     </p>
   </div>
-  <ul class="plan">
-    <li>デイタイムプラン</li>
-    <li>
-      <div>
-        <p>&yen;</p>
-        <p>5,000</p>
-      </div>
-      <p>月額</p>
-    </li>
-    <li>入会金0円</li>
-    <li>平日:9時～17時</li>
-    <li>土日祝:利用無し</li>
-    <li>コアタイムでの利用に最適なプラン</li>
-  </ul>
-  <ul class="plan">
-    <li>スタンダードプラン</li>
-    <li>
-      <div>
-        <p>&yen;</p>
-        <p>15,000</p>
-      </div>
-      <p>月額</p>
-    </li>
-    <li>入会金0円</li>
-    <li>平日:17時～23時</li>
-    <li>土日祝:営業時間全て</li>
-    <li>営業時間内で終日ご利用可能なプラン</li>
-  </ul>
-  <ul class="plan">
-    <li>プレミアムプラン</li>
-    <li>
-      <div>
-        <p>&yen;</p>
-        <p>20,000</p>
-      </div>
-      <p>月額</p>
-    </li>
-    <li>入会金5000円</li>
-    <li>平日:営業時間全て</li>
-    <li>土日祝:営業時間全て</li>
-    <li>フルに使いたい方のためのプレミアムプラン</li>
-  </ul>
+  <div class="plan-group">
+    <ul class="plan">
+      <li>デイタイムプラン</li>
+      <li>
+        <div>
+          <p>&yen;</p>
+          <p>5,000</p>
+        </div>
+        <p>月額</p>
+      </li>
+      <li>入会金0円</li>
+      <li>平日:9時～17時</li>
+      <li>土日祝:利用無し</li>
+      <li>コアタイムでの利用に最適なプラン</li>
+    </ul>
+    <ul class="plan">
+      <li>スタンダードプラン</li>
+      <li>
+        <div>
+          <p>&yen;</p>
+          <p>15,000</p>
+        </div>
+        <p>月額</p>
+      </li>
+      <li>入会金0円</li>
+      <li>平日:17時～23時</li>
+      <li>土日祝:営業時間全て</li>
+      <li>営業時間内で終日ご利用可能なプラン</li>
+    </ul>
+    <ul class="plan">
+      <li>プレミアムプラン</li>
+      <li>
+        <div>
+          <p>&yen;</p>
+          <p>20,000</p>
+        </div>
+        <p>月額</p>
+      </li>
+      <li>入会金5000円</li>
+      <li>平日:営業時間全て</li>
+      <li>土日祝:営業時間全て</li>
+      <li>フルに使いたい方のためのプレミアムプラン</li>
+    </ul>
+  </div>
   <a class="button">プラン料金</a>
 </section>
