--- a/src/components/organisms/events/events.html
+++ b/src/components/organisms/events/events.html
@@ -6,7 +6,7 @@
     <article class="event-card">
       <a href="#">
         <div class="event-thumbnail">
-          <img src="../../../img/events-1.jpg" />
+          <img src="../../../img/events-1.jpg" alt="" />
         </div>
         <div class="event-caption">
           <h3>全ての業種に対応した起業応援セミナーを開催します。</h3>
@@ -19,7 +19,7 @@
     <article class="event-card">
       <a href="#">
         <div class="event-thumbnail">
-          <img src="../../../img/events-2.jpg" />
+          <img src="../../../img/events-2.jpg" alt="" />
         </div>
         <div class="event-caption">
           <h3>第3回　Switchクリエイター交流会開催いたします！</h3>
@@ -32,7 +32,7 @@
     <article class="event-card">
       <a href="#">
         <div class="event-thumbnail">
-          <img src="../../../img/events-3.jpg" />
+          <img src="../../../img/events-3.jpg" alt="" />
         </div>
         <div class="event-caption">
           <h3>
