footerを修正　|の書き方を変更

--- a/src/components/organisms/footer/footer.scss
+++ b/src/components/organisms/footer/footer.scss
@@ -44,10 +44,6 @@
           color: $orange_bistre;
         }
       }
-
-      .bar {
-        display: none;
-      }
     }
   }
   .copyright {
@@ -69,8 +65,11 @@
       justify-content: center;
       .side {
         display: flex;
-        .bar {
-          display: block;
+        p {
+          &::after {
+            content: "|";
+            margin-left: 8px;
+          }
         }
       }
       .side:last-child {
