--- a/src/components/organisms/footer/footer.html
+++ b/src/components/organisms/footer/footer.html
@@ -1,12 +1,12 @@
 <section class="footer">
   <div class="contact">
-    <div class="address">
+    <address class="address">
       <p>
         〒532-0011&nbsp;&nbsp;大阪市淀川区西中島6丁目8-23テスト <br />
         TEL.06-1234-5678
         FAX.06-1234-5678&nbsp;&nbsp;営業時間/9:00-22:00&nbsp;&nbsp;定休日/不定休
       </p>
-    </div>
+    </address>
     <div class="icon-list">
       <i class="fa-brands fa-facebook-f"></i>
       <i class="fa-brands fa-twitter"></i>
