--- a/src/components/organisms/footer/footer.html
+++ b/src/components/organisms/footer/footer.html
@@ -1,11 +1,11 @@
-<section class="footer">
+<footer class="footer">
   <div class="contact">
     <div class="address">
-      <p>
+      <a>
         〒532-0011&nbsp;&nbsp;大阪市淀川区西中島6丁目8-23テスト <br />
         TEL.06-1234-5678
         FAX.06-1234-5678&nbsp;&nbsp;営業時間/9:00-22:00&nbsp;&nbsp;定休日/不定休
-      </p>
+      </a>
     </div>
     <div class="icon-list">
       <i class="fa-brands fa-facebook-f"></i>
@@ -16,19 +16,19 @@
   </div>
   <div class="content-list">
     <div class="side">
-      <p>HOME</p>
-      <p>SERVICE</p>
-      <p>INTERVIEW</p>
-      <p>ACCESS</p>
+      <a>HOME</a>
+      <a>SERVICE</a>
+      <a>INTERVIEW</a>
+      <a>ACCESS</a>
     </div>
     <div class="side">
-      <p>CONCEPT</p>
-      <p>FLOOR</p>
-      <p>BLOG</p>
-      <p>DOWNLOAD</p>
+      <a>CONCEPT</a>
+      <a>FLOOR</a>
+      <a>BLOG</a>
+      <a>DOWNLOAD</a>
     </div>
   </div>
   <div class="copyright">
     Copyright&nbsp;&copy;&nbsp;WordPressテーマ「Switch&#40;tcd063&#41;」All&nbsp;Right&nbsp;Reserved
   </div>
-</section>
+</footer>
