footerを修正 cssの修正

--- a/src/components/organisms/footer/footer.scss
+++ b/src/components/organisms/footer/footer.scss
@@ -65,7 +65,7 @@
       justify-content: center;
       .side {
         display: flex;
-        p {
+        a {
           &::after {
             content: "|";
             margin-left: 8px;
