topを修正 画像の高さを修正

--- a/src/components/organisms/top/top.scss
+++ b/src/components/organisms/top/top.scss
@@ -33,6 +33,7 @@
   @media screen and(min-width:$breakpoint-lg) {
     .img-group {
       padding-top: 75%;
+      height: 100vh;
       .literal {
         p {
           font-size: 36px;
