--- a/src/components/templates/news-and-events/newsAndEvents.html
+++ b/src/components/templates/news-and-events/newsAndEvents.html
@@ -1,4 +1,4 @@
-<section class="newsAndEvents">
+<section class="newsAndEvents container">
   <section class="news">
     <div class="news-and-events-title">
       <h2>News<span class="caption">お知らせ</span></h2>
