--- a/src/components/templates/news-and-events/newsAndEvents.scss
+++ b/src/components/templates/news-and-events/newsAndEvents.scss
@@ -1,13 +1,31 @@
 @use "../../variables" as *;
 
 .newsAndEvents {
-  display: flex;
   .news {
     margin-top: 60px;
   }
+  .events {
+    .event-card {
+      .event-caption {
+        h3 {
+          font-weight: 400;
+        }
+      }
+    }
+  }
   @media screen and(min-width:$breakpoint-lg) {
+    display: flex;
+    gap: 40px;
+    margin-bottom: 56px;
+    .news {
+      min-width: 0px;
+      flex: 1;
+      margin-bottom: 0px;
+    }
     .events {
-      margin: 60px 0px 120px 40px;
+      min-width: 0px;
+      flex: 1;
+      margin: 60px 0px 0px;
       .event-list {
         .event-card {
           a {
