headerを作成中 クリックしたらプルダウン実装完了

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -1,4 +1,4 @@
-<div class="container-change">
+<header class="container-change">
   <a class="switch" href="#">
     <img src="../../../img/header.png" alt="" />
   </a>
@@ -40,9 +40,12 @@
     <button class="btn btn-secondary">DOWNLOAD</button>
   </div>
   <div class="rectangle-group">
-    <div class="rectangle"></div>
-    <div class="rectangle"></div>
-    <div class="rectangle"></div>
+    <label for="check">
+      <div class="rectangle"></div>
+      <div class="rectangle"></div>
+      <div class="rectangle"></div>
+    </label>
+    <input type="checkbox" id="check" />
     <ul class="rectangle-dropdown-menu dropdown">
       <li><a href="#">HOME</a></li>
       <li>
@@ -68,4 +71,4 @@
       <li><a href="#">DOWNLOAD</a></li>
     </ul>
   </div>
-</div>
+</header>
