--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -1,30 +1,32 @@
 @use "../../variables" as *;
 
-div.container-change {
+header.container-change {
   display: flex;
-  @media screen and(max-width:$breakpoint-lg) {
-    background-color: $black;
-    width: 992px;
-    height: 60px;
-    margin-bottom: 10px;
-    a.switch {
-      margin: auto 0px auto 16px;
+  background-color: $black;
+  width: 992px;
+  height: 60px;
+  margin-bottom: 10px;
+  a.switch {
+    margin: auto 0px auto 16px;
+    width: 120px;
+    height: 20.56px;
+    img {
       width: 120px;
-      height: 20.56px;
-      img {
-        width: 120px;
-      }
     }
-    div.btn-group-change {
+  }
+  div.btn-group-change {
+    display: none;
+  }
+  div.rectangle-group {
+    #check {
       display: none;
     }
-    div.rectangle-group {
+    label {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
-      padding: 2px 0px;
+      padding: 22.5px 0px;
       gap: 3px;
-      height: 19px;
+      height: 60px;
       margin: auto 16px auto 825px;
       cursor: pointer;
       .rectangle {
@@ -33,41 +35,41 @@ div.container-change {
         background-color: $white;
         border-radius: 1px;
       }
-      &:active ul.rectangle-dropdown-menu {
-        display: block;
-      }
-      ul.rectangle-dropdown-menu {
-        display: none;
-        list-style: none;
-        background-color: $black;
-        position: absolute;
-        top: 76px;
-        left: 16px;
-        z-index: 1000;
-        float: left;
-        min-width: 10rem;
-        font-size: 1rem;
-        text-align: left;
-        background-clip: padding-box;
-        box-sizing: border-box;
-        width: 992px;
-        padding: 0px 0px 0px 16px;
-        li {
-          width: fit-content;
-          margin: 15px 0px;
-          a {
-            font-size: 14px;
-            color: $white;
-            text-decoration: none;
-          }
-          ul {
-            padding: 0px 0px 0px 12px;
-          }
+    }
+    input:checked + ul.rectangle-dropdown-menu {
+      display: block;
+    }
+    ul.rectangle-dropdown-menu {
+      display: none;
+      list-style: none;
+      background-color: $black;
+      position: absolute;
+      top: 76px;
+      left: 16px;
+      z-index: 1000;
+      float: left;
+      min-width: 10rem;
+      font-size: 1rem;
+      text-align: left;
+      background-clip: padding-box;
+      box-sizing: border-box;
+      width: 992px;
+      padding: 0px 0px 0px 16px;
+      li {
+        width: fit-content;
+        margin: 15px 0px;
+        a {
+          font-size: 14px;
+          color: $white;
+          text-decoration: none;
+        }
+        ul {
+          padding: 0px 0px 0px 12px;
         }
       }
     }
   }
-  @media screen and(min-width:$breakpoint-lg) {
+  @media screen and(min-width:$breakpoint-xl) {
     background-color: $black_50;
     width: 1200px;
     height: 90px;
