--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -82,6 +82,7 @@ header.container-change {
       }
     }
     div.btn-group-change {
+      display: block;
       button {
         background-color: transparent;
         border: 0px;
