--- a/src/components/templates/news-and-events/newsAndEvents.scss
+++ b/src/components/templates/news-and-events/newsAndEvents.scss
@@ -1,6 +1,6 @@
 @use "../../variables" as *;
 
-.newsAndEvents {
+.news-and-events {
   display: flex;
   flex-direction: column;
   gap: 38px;
@@ -20,6 +20,7 @@
   }
   @media screen and(min-width:$breakpoint-lg) {
     display: flex;
+    flex-direction: row;
     gap: 40px;
     margin-bottom: 56px;
     .news {
